[package]
name = "rust-sqrl-client"
version = "0.1.0"
authors = ["Filipp G <8738425+filipp-g@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json"] }
sodiumoxide = "0.2.6"
tiny_http = "0.8.0"
sysinfo = "*"
noise-sodiumoxide = "0.1.1"
libsodium-sys = "0.2.6"
noise-protocol = "0.1.3"